Add key generation
Add GenerateKeyOptions struct to help with creating key generation attribute
CFDictionary.

Add new OSX_10_15 feature for Data Protection Keychain.

Add missing sys attributes.

Add SecKeyCreateRandom, SecKeyCopyPublicKey, and SecKeyVerifySignature safe
wrappers.

Move KeyType to crate::key since it is available on iOS as well.

--- a/security-framework/Cargo.toml
+++ b/security-framework/Cargo.toml
@@ -44,6 +44,7 @@ OSX_10_11 = ["OSX_10_10", "security-framework-sys/OSX_10_11"]
 OSX_10_12 = ["OSX_10_11", "security-framework-sys/OSX_10_12"]
 OSX_10_13 = ["OSX_10_12", "security-framework-sys/OSX_10_13", "alpn", "session-tickets", "serial-number-bigint"]
 OSX_10_14 = ["OSX_10_13", "security-framework-sys/OSX_10_14"]
+OSX_10_15 = ["OSX_10_14", "security-framework-sys/OSX_10_15"]
 
 nightly = [] # not used, doesn't do anything, only for back compat
 
