--- a/security-framework-sys/Cargo.toml
+++ b/security-framework-sys/Cargo.toml
@@ -24,6 +24,7 @@ OSX_10_11 = ["OSX_10_10"]
 OSX_10_12 = ["OSX_10_11"]
 OSX_10_13 = ["OSX_10_12"]
 OSX_10_14 = ["OSX_10_13"]
+OSX_10_15 = ["OSX_10_14"]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-apple-darwin", "aarch64-apple-ios"]
